fixed leaderbord beind too wide

--- a/static/styles.css
+++ b/static/styles.css
@@ -171,13 +171,8 @@ td {
     margin: 0 auto;
 }
 
-<<<<<<< HEAD
 .leaderBoard::-webkit-scrollbar {
     width: 0px;
-=======
-.leaderBoardTable {
-
->>>>>>> b25fc8d8992ed58b19bdf9493cd40ec13aaac3e6
 }
 
 .leaderBoardTable td{
@@ -221,6 +216,12 @@ td {
     justify-content: center;
     position: relative;
     margin: auto;
+    max-width: 90%;
+}
+
+.leaderBoard tr td:nth-child(2) {
+    max-width: calc(70vw - 100px);
+    overflow: hidden;
 }
 
 .resetButton:hover,  .mainMenuButton:hover {
